--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
             {title: "Falla Ner ft. C1cuz & Sarettii", src: "https://audiomack.com/embed/song/cs1-3/einar-c-1cuz-x-sarettii-falla-ner"},
             {title: "Designer ft. Thrife", src: "https://audiomack.com/embed/song/cs1-3/einar-x-thrife-desginer"},
             {title: "Freestyle ft. Dree Low & Madi Banja", src: "https://audiomack.com/embed/song/cs1-3/einar-dree-low-madi-banja-freestyle"},
-            {title: "Louis Vuitton ft. Ricky Rich", src: "https://audiomack.com/embed/cs1-3/song/einar-x-ricky-rich-louis-vuitton-oslappt"}
+            {title: "Louis Vuitton ft. Ricky Rich", src="https://www.audiomack.com/embed/track/cs1-3/einar-x-ricky-rich-louis-vuitton-oslappt"}
             {title: "Vi E Kvar", src: "https://audiomack.com/embed/song/cs1-3/einar-vi-e-kvar"}
         ];
 
