--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@
 
         .album-list {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); /* Updated for wider embeds */
-            gap: 40px; /* More spacing */
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 40px;
             padding: 20px;
             margin-top: 30px;
             max-width: 1200px;
@@ -182,9 +182,9 @@
 
         .album iframe {
             width: 100%;
-            height: 300px; /* Updated for bigger embeds */
+            height: 300px;
             border: 0;
-            border-radius: 12px; /* Slightly larger radius */
+            border-radius: 12px;
         }
 
         .counter {
@@ -298,7 +298,7 @@
             }
 
             .album-list {
-                grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); /* Adjusted for smaller screens */
+                grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
             }
         }
     </style>
@@ -423,6 +423,7 @@
             { title: "What What ft. Einár", src: "https://audiomack.com/embed/song/cs1-3/dree-low-ft-einar-what-what" },
             { title: "Blåser Kallt ft. Einár", src: "https://audiomack.com/embed/song/magmareaper4/einar-x-dree-low-blser-kallt" },
             { title: "Freestyle ft. Einár & Madi Banja", src: "https://audiomack.com/embed/song/cs1-3/einar-dree-low-madi-banja-freestyle" },
+            { title: "Samma Gamla", src: "https://audiomack.com/embed/song/cs1-3/samma-gamla" }
             { title: "Go Cart ft. Yasin & Einár", src: "https://audiomack.com/embed/song/cs1-3/yasin-go-cart-ft-einar-x-dreelow" }
         ];
 
@@ -434,7 +435,7 @@
         ];
 
         const yasinSongs = [
-            { title: "Go Cart ft. Einár & Dree Low", src: "https://audiomack.com/embed/song/cs1-3/yasin-go-cart-ft-einar-x-dreelow" }
+            { title: "Go Cart ft. Einár & Dree Low", src: "https://audiomack.com/embed/song/cs1-3/yasin-go-cart-ft-einar-x-dreelow" },
         ];
 
         const originalContent = document.getElementById('featured').innerHTML;
