--- a/index.html
+++ b/index.html
@@ -411,19 +411,21 @@
             { title: "Louis Vuitton ft. Ricky Rich", src: "https://audiomack.com/embed/song/cs1-3/einar-x-ricky-rich-louis-vuitton-oslappt" },
             { title: "Mord efter mord", src: "https://audiomack.com/embed/song/cs1-3/einar-mord-efter-mord-oslappt" },
             { title: "Vi E Kvar", src: "https://audiomack.com/embed/song/cs1-3/einar-vi-e-kvar" },
-            { title: "Go Cart ft. Yasin & Dree Low", src: "https://audiomack.com/embed/song/cs1-3/yasin-go-cart-ft-einar-x-dreelow" }
+            { title: "Go Cart ft. Yasin & Dree Low", src: "https://audiomack.com/embed/song/cs1-3/yasin-go-cart-ft-einar-x-dreelow" },
+            { title: "Soldado ft. Dani M", src: "https://audiomack.com/embed/song/cs1-3/einar-dani-m-soldado" },
+            { title: "Såshor Du", src: "https://audiomack.com/embed/song/cs1-3/einar-soshor-du" },
+            { title: "In The Bando (Studioljud AI)", src: "https://audiomack.com/embed/song/cs1-3/einar-in-the-bando-studioljud-ai" }
         ];
 
         const owenSongs = [
             { title: "Diskret", src: "https://audiomack.com/embed/song/cs1-3/owen-diskret" },
-            { title: "Stress ft. Thrife & Einár", src: "https://audiomack.com/embed/song/cs1-3/einar-x-owen-thrife-stress-oslappt-bast-kvalite" }
+            { title: "Stress ft. Thrife & Einár", src: "https://audiomack.com/embed/song/cs1-3/einar-x-owen-x-thrife-stress-oslappt-bast-kvalite" }
         ];
 
         const dreeLowSongs = [
             { title: "What What ft. Einár", src: "https://audiomack.com/embed/song/cs1-3/dree-low-ft-einar-what-what" },
             { title: "Blåser Kallt ft. Einár", src: "https://audiomack.com/embed/song/magmareaper4/einar-x-dree-low-blser-kallt" },
             { title: "Freestyle ft. Einár & Madi Banja", src: "https://audiomack.com/embed/song/cs1-3/einar-dree-low-madi-banja-freestyle" },
-            { title: "Samma Gamla", src: "https://audiomack.com/embed/song/cs1-3/samma-gamla" }
             { title: "Go Cart ft. Yasin & Einár", src: "https://audiomack.com/embed/song/cs1-3/yasin-go-cart-ft-einar-x-dreelow" }
         ];
 
@@ -436,6 +438,7 @@
 
         const yasinSongs = [
             { title: "Go Cart ft. Einár & Dree Low", src: "https://audiomack.com/embed/song/cs1-3/yasin-go-cart-ft-einar-x-dreelow" },
+            { title: "Samma Gamla", src: "https://audiomack.com/embed/song/cs1-3/samma-gamla" }
         ];
 
         const originalContent = document.getElementById('featured').innerHTML;
