--- a/index.html
+++ b/index.html
@@ -163,8 +163,8 @@
         }
 
         .album-list {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            display: flex;
+            flex-direction: column;
             gap: 40px;
             padding: 20px;
             margin-top: 30px;
@@ -178,6 +178,7 @@
             padding: 15px;
             border-radius: 10px;
             text-align: center;
+            width: 100%; /* Ensure it fills the full line */
         }
 
         .album iframe {
@@ -298,7 +299,7 @@
             }
 
             .album-list {
-                grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+                gap: 30px; /* Slightly smaller gap for mobile */
             }
         }
     </style>
@@ -413,8 +414,9 @@
             { title: "Vi E Kvar", src: "https://audiomack.com/embed/song/cs1-3/einar-vi-e-kvar" },
             { title: "Go Cart ft. Yasin & Dree Low", src: "https://audiomack.com/embed/song/cs1-3/yasin-go-cart-ft-einar-x-dreelow" },
             { title: "Soldado ft. Dani M", src: "https://audiomack.com/embed/song/cs1-3/einar-dani-m-soldado" },
-            { title: "Hör Du", src: "https://audiomack.com/embed/song/cs1-3/einar-soshor-du" },
-            { title: "In The Bando (Studioljud AI)", src: "https://audiomack.com/embed/song/cs1-3/einar-in-the-bando-studioljud-ai" }
+            { title: "Såshor Du", src: "https://audiomack.com/embed/song/cs1-3/einar-soshor-du" },
+            { title: "In The Bando (Studioljud AI)", src: "https://audiomack.com/embed/song/cs1-3/einar-in-the-bando-studioljud-ai" },
+            { title: "Galning ft. MPL", src: "https://audiomack.com/embed/song/cs1-3/einar-x-mpl-galning-official-video" }
         ];
 
         const owenSongs = [
