--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
 
     <script>
         const einarSongs = [
-            { title: "Lugnet Före Stormen", src: "https://audiomack.com/embed/album/cs1-3/lugnet-fore-stormen" },
+            { title: "Lugnet Före Stormen (album)", src: "https://audiomack.com/embed/album/cs1-3/lugnet-fore-stormen" },
             { title: "Sett Nånting", src: "https://audiomack.com/embed/song/magmareaper4/einar-x-mpl-sett-nanting" },
             { title: "Centrum", src: "https://audiomack.com/embed/song/magmareaper4/einar-centrum" },
             { title: "GG PP ft. Moewgli & 5ifty", src: "https://audiomack.com/embed/song/cs1-3/einar-gg-pp-ft-moewgli-5ifty-oslappt" },
