--- a/index.html
+++ b/index.html
@@ -416,6 +416,7 @@
             { title: "Soldado ft. Dani M", src: "https://audiomack.com/embed/song/cs1-3/einar-dani-m-soldado" },
             { title: "Hör Du", src: "https://audiomack.com/embed/song/cs1-3/einar-soshor-du" },
             { title: "In The Bando (Studioljud AI)", src: "https://audiomack.com/embed/song/cs1-3/einar-in-the-bando-studioljud-ai" },
+            { title: "Samma Gamla", src: "https://audiomack.com/embed/song/cs1-3/samma-gamla" }
             { title: "Galning ft. MPL", src: "https://audiomack.com/embed/song/cs1-3/einar-x-mpl-galning-official-video" }
         ];
 
@@ -439,8 +440,7 @@
         ];
 
         const yasinSongs = [
-            { title: "Go Cart ft. Einár & Dree Low", src: "https://audiomack.com/embed/song/cs1-3/yasin-go-cart-ft-einar-x-dreelow" },
-            { title: "Samma Gamla", src: "https://audiomack.com/embed/song/cs1-3/samma-gamla" }
+            { title: "Go Cart ft. Einár & Dree Low", src: "https://audiomack.com/embed/song/cs1-3/yasin-go-cart-ft-einar-x-dreelow" }
         ];
 
         const originalContent = document.getElementById('featured').innerHTML;
