--- a/index.html
+++ b/index.html
@@ -440,9 +440,9 @@
         ];
 
         const yasinSongs = [
-            { title: "Go Cart ft. Einár & Dree Low", src: "https://audiomack.com/embed/song/cs1-3/yasin-go-cart-ft-einar-x-dreelow" }
-            {title: "See Me Shine", src: "https://audiomack.com/embed/song/cs1-3/song/yasin-byn-see-me-shine"}
-        ];
+    { title: "Go Cart ft. Einár & Dree Low", src: "https://audiomack.com/embed/song/cs1-3/yasin-go-cart-ft-einar-x-dreelow" },
+    { title: "See Me Shine", src: "https://audiomack.com/embed/song/cs1-3/yasin-byn-see-me-shine" }
+];
 
         const originalContent = document.getElementById('featured').innerHTML;
 
