--- a/index.html
+++ b/index.html
@@ -439,9 +439,10 @@
             { title: "Meckar En Kush ft. Einár", src: "https://audiomack.com/embed/song/cs1-3/einar-x-thrife-meckar-en-kush" }
         ];
 
-        const yasinSongs = [
+const yasinSongs = [
     { title: "Go Cart ft. Einár & Dree Low", src: "https://audiomack.com/embed/song/cs1-3/yasin-go-cart-ft-einar-x-dreelow" },
-    { title: "See Me Shine", src: "https://audiomack.com/embed/song/cs1-3/yasin-byn-see-me-shine" }
+    { title: "See Me Shine", src: "https://audiomack.com/embed/song/cs1-3/yasin-byn-see-me-shine" },
+    { title: "Min Bitch", src: "https://audiomack.com/embed/song/cs1-3/yasin-byn-min-bitch" }
 ];
 
         const originalContent = document.getElementById('featured').innerHTML;
