--- a/index.html
+++ b/index.html
@@ -442,7 +442,8 @@
 const yasinSongs = [
     { title: "Go Cart ft. Einár & Dree Low", src: "https://audiomack.com/embed/song/cs1-3/yasin-go-cart-ft-einar-x-dreelow" },
     { title: "See Me Shine", src: "https://audiomack.com/embed/song/cs1-3/yasin-byn-see-me-shine" },
-    { title: "Min Bitch", src: "https://audiomack.com/embed/song/cs1-3/yasin-byn-min-bitch" }
+    { title: "Min Bitch", src: "https://audiomack.com/embed/song/cs1-3/yasin-byn-min-bitch" },
+    { title: "Avancerad", src: "https://audiomack.com/embed/song/cs1-3/yasinthedon-avancerad" }
 ];
 
         const originalContent = document.getElementById('featured').innerHTML;
