--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
             { title: "Freestyle ft. Dree Low & Madi Banja", src: "https://audiomack.com/embed/song/cs1-3/einar-dree-low-madi-banja-freestyle" },
             { title: "Pop Smoke 2 ft. 5iftyy & Moewgli", src: "https://audiomack.com/embed/song/cs1-3/einar-5iftyy-moewgli-pop-smoke-2" },
             { title: "Psykopater ft. Greekazo", src: "https://audiomack.com/embed/song/cs1-3/einar-x-greekazo-psykopater-official-oslappt-audio-sjuk-lat" },
-            { title: "What What ft. Dree Low", src: "https://audiomack.com/embed/song/csumi3/dree-low-ft-einar-what-what" },
+            { title: "What What ft. Einár", src: "https://audiomack.com/embed/song/cs1-3/dree-low-ft-einar-what-what" },
             { title: "Steppa In", src: "https://audiomack.com/embed/song/magmareaper4/steppa-in-einr" },
             { title: "Kaos", src: "https://audiomack.com/embed/song/magmareaper4/einr-kaos" },
             { title: "Trapstar$ ft. Sulle", src: "https://audiomack.com/embed/song/magmareaper4/trapstar-1" },
