--- a/index.html
+++ b/index.html
@@ -415,6 +415,7 @@
             { title: "Vi E Kvar", src: "https://audiomack.com/embed/song/cs1-3/einar-vi-e-kvar" },
             { title: "Go Cart ft. Yasin & Dree Low", src: "https://audiomack.com/embed/song/cs1-3/yasin-go-cart-ft-einar-x-dreelow" },
             { title: "Soldado ft. Dani M", src: "https://audiomack.com/embed/song/cs1-3/einar-dani-m-soldado" },
+            {title: "Wow ft. k27", src: "https://audiomack.com/magmareaper4/song/einar-k27-wow"}, 
             { title: "Hör Du", src: "https://audiomack.com/embed/song/cs1-3/einar-soshor-du" },
             { title: "In The Bando (Studioljud AI)", src: "https://audiomack.com/embed/song/cs1-3/einar-in-the-bando-studioljud-ai" },
             { title: "Samma Gamla", src: "https://audiomack.com/embed/song/cs1-3/samma-gamla" },
